fixed click and scrollbar issue

--- a/src/index.css
+++ b/src/index.css
@@ -73,3 +73,9 @@ body {
     max-width: 1366px;
     margin: auto;
 }
+
+@media print{
+    ::-webkit-scrollbar {
+        display: none;
+    }
+}
